<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_light_pressed">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:translationY="80dp"
                android:translationX="40dp"
                android:textColor="#e20461"
                android:textSize="30sp" />

            <TextView
                android:text="@string/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textSize="30sp"
                android:textColor="#e20461"
                android:textAlignment="textStart"
                android:translationY="80dp"
                android:translationX="25dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/explication"
                android:textAlignment="center"
                android:textSize="60sp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:translationY="240dp"
                android:textColor="#ff006b"
                android:translationX="100dp"
                android:textStyle="normal|bold"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/bpm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textAlignment="center"
                android:translationY="330dp"
                android:translationX="130dp"
                android:textSize="24sp"
                android:textColor="#e20461" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nouvelle Mesure"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="57dp"
            android:translationY="-10dp" />

    </RelativeLayout>

</LinearLayout>